--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ h2{
     &>p{
         color: #005763;
         font-size: 26px;
+        margin-bottom: 1rem;
     }
     &>h2{
         color: #005763;
@@ -172,7 +173,6 @@ h2{
     &>h3{
         color: #005763;
         font-size: 32px;
-        margin-top: 2rem;
         font-weight: 500;
         text-decoration: underline;
     }
