--- a/style.css
+++ b/style.css
@@ -16,8 +16,85 @@ main{
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin-left: 1rem;
 }
+
+@media (max-width: 480px){
+    body{
+        margin: 1rem;
+        max-width: 480px;
+    }
+    main{
+        flex-direction: column;
+        margin-left: -2.5rem;
+        align-items: center;
+        justify-content: center;
+    }
+    .imgchar{
+        display: none;
+    }
+}
+
+
+/*#####################################*/
+/*############### TITLE ###############*/
+/*#####################################*/
+
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.allwords{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.discover{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    -webkit-text-stroke: 2px #005763;
+    color: #00B0C7;
+    font-size: 80px;
+    font-family: Bangers;
+    text-shadow: 3px 3px 4px rgba(175, 221, 107, 1), 3px -3px 4px rgba(175, 221, 107, 1), -3px 3px 4px rgba(175, 221, 107, 1), -3px -3px 4px rgba(175, 221, 107, 1);
+}
+.word3{
+    font-size: 96px;
+    margin-right: 2rem;
+    -webkit-text-stroke: 2px #005763;
+}
+
+@media (max-width: 480px){
+    .header{
+        flex-direction: column;
+        margin-top: -30rem;
+        margin-bottom: 13rem;
+        margin-left: 2rem;
+        max-width: 480px;
+    }
+    .imgtitle img{
+        max-width: 440px;
+    }
+    .discover{
+        font-size: 64px;
+    }
+    .word3{
+        margin-right: 0rem;
+    }
+}
+/*#####################################*/
+/*################ END ################*/
+/*#####################################*/
+
+
 
 /*########################################################*/
 /*######### Table of buttons to random characters ########*/
@@ -35,6 +112,12 @@ main{
     transform: translateX(4%);
 }
 
+.instruction-choose{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h2{
     color: #00B0C7;
     font-size: 40px;
@@ -42,6 +125,12 @@ h2{
     font-weight: 500;
     text-align: center;
     padding-bottom: 1rem;
+}
+
+.choose-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .choose{
@@ -82,6 +171,31 @@ h2{
 .dead{
     font-family: Butcherman;
 }
+
+@media (max-width: 480px){
+    .buttons-container{
+        flex-direction: row;
+    }
+    .randomZone{
+        margin-top: 20rem;
+        width: 392px;
+        align-items: center;
+        padding: 0.5rem;
+    }
+    .instruction-choose{
+        flex-direction: row;
+        gap: 1rem;
+    }
+    .filter-button{
+        height: 50px;
+        font-size: 24px;
+        padding: 0 0.7rem;
+    }
+    .buttons-container{
+        padding-top: 0;
+        gap: 1rem;
+    }
+}
 /*#####################################*/
 /*################ END ################*/
 /*#####################################*/
@@ -93,47 +207,6 @@ h2{
     align-items: center;
     justify-content: center;
 }
-
-/*#####################################*/
-/*############### TITLE ###############*/
-/*#####################################*/
-
-.header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1rem;
-}
-
-.allwords{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.discover{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    -webkit-text-stroke: 2px #005763;
-    color: #00B0C7;
-    font-size: 80px;
-    font-family: Bangers;
-    text-shadow: 3px 3px 4px rgba(175, 221, 107, 1), 3px -3px 4px rgba(175, 221, 107, 1), -3px 3px 4px rgba(175, 221, 107, 1), -3px -3px 4px rgba(175, 221, 107, 1);
-}
-.word3{
-    font-size: 96px;
-    margin-right: 2rem;
-    -webkit-text-stroke: 2px #005763;
-}
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
-
 
 
 /*############################################*/
@@ -248,7 +321,7 @@ h2{
         font-weight: 500;
         letter-spacing: 1px;
         height: 75px;
-        width: 148px;
+        width: 140px;
         text-align: center;
     }
 }
@@ -276,6 +349,15 @@ p{
     font-family: Bangers;
     font-weight: 500;
     letter-spacing: 1.5px;
+}
+
+@media (max-width: 480px){
+    .characters-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 1fr;
+        width: 392px;
+        height: 1892px;
+    }
 }
 
 /*#####################################*/
