--- a/style.css
+++ b/style.css
@@ -313,8 +313,8 @@ h2{
 
 @media (max-width: 480px){
     .popup{
-        width: 400px;
-        height: 400px;
+        width: 350px;
+        height: 350px;
         &>h2{
             font-size: 26px;
         }
@@ -348,11 +348,10 @@ h2{
 .characters-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    gap: 10px;
-    width: 1176px;
-    height: 624px;
+    width: 1140px;
+    height: 620px;
+    padding: 0.5rem;
     background-color: #005763;
-    padding: 1rem;
     border: 8px solid #afdd6b;
     border-radius: 1rem;
     z-index: 1;
@@ -362,8 +361,8 @@ h2{
 .character {
     border: 4px solid #afdd6b;
     border-radius: 1rem;
-    margin: 5px;
-    padding: 10px;
+    padding: 0.5rem;
+    margin: 0.5rem;
     width: 150px;
     height: 270px;
     background-color: #00B0C7;
@@ -408,8 +407,8 @@ p{
     .characters-container{
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 1fr;
-        width: 392px;
-        height: 1892px;
+        width: 380px;
+        height: 1860px;
     }
 }
 
