--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
     margin: 0;
 }
 
-@media (max-width: 480px){
+@media only screen and (max-width: 480px){
     html{
-        width: 100vw;
+        width: 100%;
+        overflow-x: hidden;
     }
 }
 
