--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ h2{
     &>ul{
         color: #005763;
         font-size: 24px;
+        margin: 0 3rem;
     }
 }
 
@@ -316,6 +317,7 @@ h2{
     color: #005763;
     text-shadow: 0 10px 15px #afdd6b, 10px 0 15px #afdd6b, -10px 0 15px #afdd6b, 0 -10px 15px #afdd6b;
 }
+
 
 @media (max-width: 480px){
     .popup{
