--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ h2{
     .popup{
         width: 350px;
         height: 350px;
+        padding: 40px;
         &>h2{
             font-size: 26px;
         }
@@ -345,6 +346,10 @@ h2{
         height: 150px;
         border-radius: 2rem;
         margin-bottom: 0.5rem;
+    }
+    .popup-close {
+        font-size: 24px;
+        text-shadow: 0 5px 10px #005763, 5px 0 10px #005763, -5px 0 10px #005763, 0 -5px 10px #005763;
     }
 }
 /*#####################################*/
