--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ main{
         max-width: 480px;
     }
     main{
+        display: flex;
         flex-direction: column;
-        margin-left: -2.3rem;
         align-items: center;
         justify-content: center;
     }
@@ -59,6 +59,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-right: 2rem;
 }
 
 .discover{
@@ -66,7 +67,6 @@ main{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
     -webkit-text-stroke: 2px #005763;
     color: #00B0C7;
     font-size: 80px;
@@ -84,7 +84,6 @@ main{
         flex-direction: column;
         margin-top: -30rem;
         margin-bottom: 13rem;
-        margin-left: 2rem;
         max-width: 480px;
     }
     .imgtitle img{
@@ -116,7 +115,6 @@ main{
     color: #00B0C7;
     padding: 1rem;
     margin-top: 13rem;
-    transform: translateX(4%);
 }
 
 .instruction-choose{
@@ -372,7 +370,6 @@ h2{
     border: 8px solid #afdd6b;
     border-radius: 1rem;
     z-index: 1;
-    transform: translateX(4%);
 }
 
 .character {
