--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @media only screen and (max-width: 480px){
     html{
         width: 100%;
