Patch com and requests
Requests changed
Com changed

--- a/style.css
+++ b/style.css
@@ -100,9 +100,9 @@ main{
         margin-right: 0rem;
     }
 }
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
+/*############################################*/
+/*################ TITLE: END ################*/
+/*############################################*/
 
 
 
@@ -205,9 +205,9 @@ h2{
         gap: 1rem;
     }
 }
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
+/*####################################################*/
+/*#### Table of buttons to random characters: END ####*/
+/*####################################################*/
 
 
 .tableHeader{
@@ -354,9 +354,9 @@ h2{
         text-shadow: 0 5px 10px #005763, 5px 0 10px #005763, -5px 0 10px #005763, 0 -5px 10px #005763;
     }
 }
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
+/*############################################*/
+/*################ POPUP: END ################*/
+/*############################################*/
 
 
 
@@ -429,10 +429,10 @@ p{
         height: 1860px;
     }
 }
+/*##################################*/
+/*#### Table of characters: END ####*/
+/*##################################*/
 
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
 
 .imgchar img{
     transform: translateY(10%) translateX(-25%) scale(1.5);
@@ -502,7 +502,6 @@ p{
         transform: translateX(-45px);
     }
 }
-
-/*#####################################*/
-/*################ END ################*/
-/*#####################################*/
+/*##############################*/
+/*#### TELEPORT BUTTON: END ####*/
+/*##############################*/
